--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
 	"dependencies": {
+		"@anthropic-ai/sdk": "^0.30.1",
 		"@langchain/anthropic": "^0.3.15",
 		"@langchain/core": "^0.3.15",
 		"@langchain/langgraph": "^0.2.8",
 		"@langchain/ollama": "^0.1.1",
 		"@langchain/openai": "^0.3.7",
 		"@langchain/textsplitters": "^0.1.0",
-		"@modelcontextprotocol/sdk": "^1.12.0",
-		"@types/node": "^22.15.21",
+		"@modelcontextprotocol/sdk": "^1.12.1",
+		"@types/express": "^5.0.2",
+		"@types/node": "^22.15.29",
 		"axios": "^1.8.4",
 		"chromadb": "^1.10.4",
 		"chromadb-default-embed": "^2.13.2",
 		"dotenv": "^16.4.7",
+		"express": "^5.1.0",
 		"langchain": "^0.1.37",
+		"node-fetch": "^3.3.2",
 		"openai": "^4.91.1",
 		"sqlite": "^5.1.1",
-		"sqlite3": "^5.1.7"
+		"sqlite3": "^5.1.7",
+		"ts-node": "^10.9.2"
 	},
 	"name": "main",
 	"version": "1.0.0",
