--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
 		"start": "node ./src/examples/usage.js",
 		"run": "node ./src/index.js",
 		"dev": "lite-server",
-		"build": "npx tsc"
+		"build": "npx tsc",
+		"mcp": "npx ts-node --esm ./src/examples/mcpUsage.ts",
+		"chunks": "npx ts-node --esm ./src/examples/chunkProcessingMain.ts",
+		"saga": "npx ts-node --esm ./src/examples/sagaChunkProcessing.ts"
 	},
 	"devDependencies": {
 		"typescript": "^5.8.3"
