--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "resolveJsonModule": true,
     "downlevelIteration": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/test/testData.js"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
