--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"@anthropic-ai/sdk": "^0.30.1",
+		"@google/genai": "^1.16.0",
 		"@langchain/anthropic": "^0.3.15",
 		"@langchain/core": "^0.3.15",
 		"@langchain/langgraph": "^0.2.8",
@@ -18,11 +19,11 @@
 		"langchain": "^0.1.37",
 		"node-fetch": "^3.3.2",
 		"openai": "^4.91.1",
+		"socket.io": "^4.8.1",
+		"socket.io-client": "^4.8.1",
 		"sqlite": "^5.1.1",
 		"sqlite3": "^5.1.7",
-		"ts-node": "^10.9.2",
-		"socket.io-client": "^4.8.1",
-		"socket.io": "^4.8.1"
+		"ts-node": "^10.9.2"
 	},
 	"name": "main",
 	"version": "1.0.0",
