--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@anthropic-ai/claude-agent-sdk": "^0.1.10",
 		"@anthropic-ai/sdk": "^0.30.1",
 		"@google/genai": "^1.16.0",
 		"@langchain/anthropic": "^0.3.15",
