updated claude agent for tool call

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"sqlite": "^5.1.1",
 		"sqlite3": "^5.1.7",
 		"ts-node": "^10.9.2",
-		"zod": "^4.1.12"
+		"zod": "3.24.1"
 	},
 	"name": "main",
 	"version": "1.0.0",
