--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": false,
     "noEmit": false,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "isolatedModules": true,
     "outDir": "./dist",
     "rootDir": "./src",
