--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 		"@anthropic-ai/claude-agent-sdk": "0.1.15",
 		"@anthropic-ai/sdk": "^0.30.1",
 		"@google/genai": "^1.16.0",
-		"@modelcontextprotocol/sdk": "^1.12.1",
+		"@modelcontextprotocol/sdk": "1.12.1",
 		"@types/express": "^5.0.2",
 		"@types/node": "^22.15.29",
 		"axios": "^1.8.4",
